fixed video div spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -259,6 +259,7 @@
     padding-bottom: 56.25%; /* 16:9 */
     //padding-top: 25px;
     height: 0;
+    margin-bottom: $spacing-unit;
 
     iframe {
         position: absolute;
